--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1.0">
-    <title>vue-demo</title>
+    <meta name="viewport" content="initial-scale=1,width=device-width">
+    <title>vex-vue</title>
   </head>
   <body>
     <div id="app"></div>
