--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1,width=device-width">
-    <title>vex-vue</title>
+    <title>Vue全家桶二次开发V2EX社区</title>
   </head>
   <body>
     <div id="app"></div>
